local maven publishing and haze-materials hack to compile

--- a/gradle.properties
+++ b/gradle.properties
@@ -32,24 +32,24 @@ roborazzi.record.namingStrategy=testClassAndMethod
 roborazzi.test.verify=true
 
 ##################################
-# Publishing
+# PublishingSONATYPE_HOST=CENTRAL_PORTAL
+##RELEASE_SIGNING_ENABLED=true
+##
+##GROUP=dev.chrisbanes.haze
+##VERSION_NAME=1.7.0-SNAPSHOT
+##
+##POM_DESCRIPTION=Haze
+##POM_URL=https://github.com/chrisbanes/haze/
+##POM_SCM_URL=https://github.com/chrisbanes/haze/
+##POM_SCM_CONNECTION=scm:git:git://github.com/chrisbanes/haze.git
+##POM_SCM_DEV_CONNECTION=scm:git:git://github.com/chrisbanes/haze.git
+##
+##POM_LICENCE_NAME=The Apache Software License, Version 2.0
+##POM_LICENCE_URL=http://www.apache.org/licenses/LICENSE-2.0.txt
+##POM_LICENCE_DIST=repo
+##
+##POM_DEVELOPER_ID=chrisbanes
+##POM_DEVELOPER_NAME=Chris Banes
 ##################################
 
-SONATYPE_HOST=CENTRAL_PORTAL
-RELEASE_SIGNING_ENABLED=true
-
-GROUP=dev.chrisbanes.haze
-VERSION_NAME=1.7.0-SNAPSHOT
-
-POM_DESCRIPTION=Haze
-POM_URL=https://github.com/chrisbanes/haze/
-POM_SCM_URL=https://github.com/chrisbanes/haze/
-POM_SCM_CONNECTION=scm:git:git://github.com/chrisbanes/haze.git
-POM_SCM_DEV_CONNECTION=scm:git:git://github.com/chrisbanes/haze.git
-
-POM_LICENCE_NAME=The Apache Software License, Version 2.0
-POM_LICENCE_URL=http://www.apache.org/licenses/LICENSE-2.0.txt
-POM_LICENCE_DIST=repo
-
-POM_DEVELOPER_ID=chrisbanes
-POM_DEVELOPER_NAME=Chris Banes
+#
